// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconHeader DOM rendering renders correctly with inner element 1`] = `
<header
  className="KambiWidget-card-text-color KambiWidget-card-border-color KambiWidget-font header"
>
  <div
    className="icon"
  >
    <div>
      Icon
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="title"
      title="test"
    >
      test
    </div>
    <div
      className="subtitle"
      title={undefined}
    />
  </div>
</header>
`;

exports[`IconHeader DOM rendering renders correctly with title 1`] = `
<header
  className="KambiWidget-card-text-color KambiWidget-card-border-color KambiWidget-font header"
>
  <div
    className="icon"
  />
  <div
    className="container"
  >
    <div
      className="title"
      title="test"
    >
      test
    </div>
    <div
      className="subtitle"
      title={undefined}
    />
  </div>
</header>
`;

exports[`IconHeader DOM rendering renders correctly with title and subtitle 1`] = `
<header
  className="KambiWidget-card-text-color KambiWidget-card-border-color KambiWidget-font header"
>
  <div
    className="icon"
  />
  <div
    className="container"
  >
    <div
      className="title"
      title="test"
    >
      test
    </div>
    <div
      className="subtitle"
      title="Test subtitle"
    >
      Test subtitle
    </div>
  </div>
</header>
`;
